Basic project setup with vercel configuration

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Adam Siekierski <a@siekierski.ml>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@vercel/node": "^1.8.4",
+    "vercel": "^20.1.2"
+  }
 }
