--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://require.podcast.gq"
+      "destination": "https://require.pl"
     }
   ]
 }
